allow seperate password login for sftp
Signed-off-by: mib1185 <mail@mib85.de>

--- a/roles/ssh_hardening/templates/opensshd.conf.j2
+++ b/roles/ssh_hardening/templates/opensshd.conf.j2
@@ -269,7 +269,7 @@ Match Group sftponly
 {% endif %}
     AllowTcpForwarding no
     AllowAgentForwarding no
-    PasswordAuthentication {{ 'yes' if (ssh_server_password_login|bool) else 'no' }}
+    PasswordAuthentication {{ 'yes' if (sftp_password_login|bool) else 'no' }}
     PermitRootLogin no
     X11Forwarding no
 {% endif %}
